--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-								<img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+								<img class="header-logo-image" src="dist/images/logo.png" alt="Logo">
                             </a>
                         </h1>
                     </div>
@@ -35,16 +35,16 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">Dressing numérique en ligne</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+	                        <p class="hero-paragraph">Votre nouveau dressing Choicy, pour vendre selon vos goûts et vos occasions</p>
 	                        <div class="hero-cta">
-								<a class="button button-primary button-wide-mobile" href="#">Get early access</a>
+								<a class="button button-primary button-wide-mobile" href="#">Une question ?</a>
 							</div>
 						</div>
 						<div class="mockup-container">
 							<div class="mockup-bg">
 								<img src="dist/images/iphone-hero-bg.svg" alt="iPhone illustration">
 							</div>
-							<img class="device-mockup" src="dist/images/iphone-hero.png" alt="iPhone Hero">
+							<img class="device-mockup" src="dist/images/iPhone 12 Pro.svg" alt="iPhone Hero">
 						</div>
                     </div>
                 </div>
@@ -59,11 +59,11 @@
 									<div class="mockup-bg">
 										<img src="dist/images/iphone-feature-bg-01.svg" alt="iPhone Feature 01 illustration">
 									</div>
-									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-01.png" alt="iPhone Feature 01">
+									<img class="device-mockup is-revealing" src="dist/images/iPhone 13.svg" alt="iPhone Feature 01">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
-									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+									<h3 class="mt-0 mb-16">Votre propre dressing en ligne</h3>
+									<p class="m-0">Composez votre tenue de rêve en toute bonté</p>
 								</div>
 							</div>
 							<div class="feature-extended">
@@ -71,11 +71,11 @@
 									<div class="mockup-bg">
 										<img src="dist/images/iphone-feature-bg-02.svg" alt="iPhone Feature 02 illustration">
 									</div>
-									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-02.png" alt="iPhone Feature 02">
+									<img class="device-mockup is-revealing" src="dist/images/iPhone 13 2.svg" alt="iPhone Feature 02">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
-									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+									<h3 class="mt-0 mb-16">Visiter les dressing</h3>
+									<p class="m-0">Inspirez vous des autres utilisateurs pour vos outfit favoris</p>
 								</div>
 							</div>
 							<div class="feature-extended">
@@ -83,11 +83,11 @@
 									<div class="mockup-bg">
 										<img src="dist/images/iphone-feature-bg-03.svg" alt="iPhone Feature 03 illustration">
 									</div>
-									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-03.png" alt="iPhone Feature 03">
+									<img class="device-mockup is-revealing" src="dist/images/iPhone 12 Pro (Wooden Hands).svg" alt="iPhone Feature 03">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
-									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+									<h3 class="mt-0 mb-16">iOS</h3>
+									<p class="m-0">Disponible sur App Store</p>
 								</div>
 							</div>
 							<div class="feature-extended">
@@ -95,11 +95,11 @@
 									<div class="mockup-bg">
 										<img src="dist/images/iphone-feature-bg-04.svg" alt="iPhone Feature 04 illustration">
 									</div>
-									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-04.png" alt="iPhone Feature 04">
+									<img class="device-mockup is-revealing" src="dist/images/iPhone 12 Pro (Wooden Hands) win.svg" alt="iPhone Feature 04">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
-									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+									<h3 class="mt-0 mb-16">Android</h3>
+									<p class="m-0">Disponible sur Google Play Store</p>
 								</div>
 							</div>
 						</div>
@@ -117,10 +117,10 @@
 					<div class="container-sm">
 						<div class="cta-inner section-inner">
 							<div class="cta-header text-center">
-								<h2 class="section-title mt-0">Stay in the know</h2>
-								<p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+								<h2 class="section-title mt-0">Vous ne portez plus vos vêtements ?</h2>
+								<p class="section-paragraph">Vendez les, c’est easy</p>
 								<div class="cta-cta">
-									<a class="button button-primary button-wide-mobile" href="#">Get early access</a>
+									<a class="button button-primary button-wide-mobile" href="#">Télechargez</a>
 								</div>
 							</div>
 						</div>
@@ -132,7 +132,7 @@
 					<div class="site-footer-inner">
 						<div class="brand footer-brand">
 							<a href="#">
-								<img src="dist/images/logo.svg" alt="Venus logo">
+								<img src="dist/images/logo.png" alt="Venus logo">
 							</a>
 						</div>
 						<ul class="footer-links list-reset">
@@ -140,14 +140,14 @@
 								<a href="#">Contact</a>
 							</li>
 							<li>
-								<a href="#">About us</a>
+								<a href="#">A propos</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="#">FAQ's</a>
 							</li>
 							<li>
 								<a href="#">Support</a>
-							</li>
+							</li> -->
 						</ul>
 						<ul class="footer-social-links list-reset">
 							<li>
@@ -175,7 +175,7 @@
 								</a>
 							</li>
 						</ul>
-						<div class="footer-copyright">&copy; 2018 Venus, all rights reserved</div>
+						<div class="footer-copyright">&copy; 2023 Choicy, tous droits réservés</div>
 					</div>
 				</div>
 			</div>
