--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-								<img class="header-logo-image" src="dist/images/logo.png" alt="Logo">
+								<img class="header-logo-image" src="dist/images/logo-violet.png" alt="Logo">
                             </a>
                         </h1>
                     </div>
@@ -148,7 +148,7 @@
 					<div class="site-footer-inner">
 						<div class="brand footer-brand">
 							<a href="#">
-								<img src="dist/images/logo.png" alt="Choicy logo">
+								<img src="dist/images/logo-violet.png" alt="Choicy logo">
 							</a>
 						</div>
 						<ul class="footer-links list-reset">
