--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Choicy</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
 	<link rel="icon" type="image/x-icon" href="dist/images/icon_logo_C.png">
@@ -39,15 +40,23 @@
 	                        <p class="hero-paragraph">Composez votre tenue de rêve en toute bonté<br>Votre nouveau dressing Choicy, pour vendre selon vos goûts et vos occasions</p>
 							<div class="flex social-btns">
 								<a class="app-btn blu flex vert" href="http:apple.com">
-								  <i class="fab fa-apple"></i>
-								  <p>Available on the <br/> <span class="big-txt">App Store</span></p>
+									<i class="fab fa-apple"></i>
+									<p>Available on the <br/> <span class="big-txt">App Store</span></p>
 								</a>
 							  
 								<a class="app-btn blu flex vert" href="http:google.com">
 									<i class="fab fa-google-play"></i>
-									  <p>Get it on <br/> <span class="big-txt">Google Play</span></p>
+									<p>Get it on <br/> <span class="big-txt">Google Play</span></p>
 								</a>
-							  </div>					  
+							</div>	
+							<!-- <div class="gallery">
+								<img src="dist/images/1.jpeg" alt="a house on the mountain">
+								<img src="dist/images/2.webp" alt="a big building">
+								<img src="dist/images/3.jpeg" alt="another house">
+								<img src="dist/images/4.jpeg" alt="a small road between two houses">
+								<img src="dist/images/5.avif" alt="a modern city">
+								<img src="dist/images/6.jpeg" alt="a lot of old houses">
+							</div>	 -->
 						</div>
 						<div class="mockup-container">
 							<div class="mockup-bg">
